--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
 
     <string name="ok">OK</string>
     <string name="cancel">Cancel</string>
+    <string name="add_button">Adauga</string>
 
     <string name="home">Acasa</string>
     <string name="income">Venit</string>
@@ -15,6 +16,8 @@
     <string name="statistics">Statistici</string>
     <string name="settings">Setari</string>
     <string name="help">Ajutor</string>
+    <string name="add_amount">Adauga suma noua</string>
+
 
 
     <string name="hello_blank_fragment">Hello blank fragment</string>
@@ -26,5 +29,26 @@
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
 
+    <string-array name="income_options">
+        <item>Salar</item>
+        <item>Prima</item>
+        <item>Permiu</item>
+        <item>Bursa</item>
+        <item>Donatie</item>
+        <item>Alta sursa</item>
+    </string-array>
+
+    <string-array name="cost_options">
+        <item>Chirie</item>
+        <item>Timp liber</item>
+        <item>Artricole vestimentare</item>
+        <item>Alimente</item>
+        <item>Utilitati</item>
+        <item>Servicii de telefonie</item>
+        <item>Internet</item>
+        <item>Servicii medicale</item>
+        <item>Donatie</item>
+        <item>Alta sursa</item>
+    </string-array>
 
 </resources>
